Changes in version 0.8-2 (??-??-2013, Rev. 1???)
================================================

- The output of graph2latex has greatly improved and you nearly get 
  in TikZ what you can see in the Java GUI. 

- If a correlation matrix is selected in the main window, the same 
  correlation matrix is loaded per default in the power analysis dialog.
  
- 

Changes in version 0.8-1 (06-04-2013, Rev. 1567)
================================================

- An rJava update to 0.9-4 removed necessary files for gMCP 0.8-0.
  This is now fixed and CommonJavaJars (>= 1.0.3) are required.

- Since package highlight is now orphaned we instead use knitr.

- Fix for loading the namespace when just the base namespace is loaded.

 28 files changed, 177 insertions(+), 197 deletions(-)
 

Changes in version 0.8-0 (14-10-2012, Rev. 1536)
================================================

- Fixed: If edges or nodes were changed with a double click,
  after that an error dialog was shown although nothing was wrong. 

- Fixed: You could not change the type of parametric test in the options.

- You can select more than one node or edge and move them around.

- New class for entangled graphs (graphs with memory, i.e. linear convex 
  combinations of graphs with the same nodes).

- Better error messages when input doesn't meet demands.

- Improved: Power simulations for singular correlation matrices.

- Entangled graphs (graphs with memory, i.e. linear convex combinations of graphs 
  with the same nodes) as experimental feature (has to be activated in the options).

- Two entangled example graphs (Entangled1Maurer2012, Entangled2Maurer2012)
  from Maurer et al.

- New example graph from Ferber et al. 2011.

- Tooltips in options dialog.

- Improved power dialog.

 86 files changed, 3005 insertions(+), 1600 deletions(-)


Changes in version 0.7-12 (02-08-2012, Rev. 1420)
================================================
